fix(home): align balances, activity feed, uppercase be own bank and align total

--- a/assets/css/components/_activity-feed.scss
+++ b/assets/css/components/_activity-feed.scss
@@ -1,4 +1,4 @@
-.af-header { margin-bottom: 19px; }
+.af-header {}
 .af-item {
   height: calc(635px/8);
   border-left: 1px solid #d2ced0;
